# packages/contracts/tests/snapshots/v1-openapi.contract.json
@@ -101,12 +101,19 @@
                             "type": "integer",
                             "minimum": 0,
                             "maximum": 9007199254740991
+                          },
+                          "saturatedSince": {
+                            "type": "integer",
+                            "minimum": 0,
+                            "maximum": 9007199254740991,
+                            "nullable": true
                           }
                         },
                         "required": [
                           "resourceId",
                           "amountGrains",
-                          "lostGrains"
+                          "lostGrains",
+                          "saturatedSince"
                         ],
                         "additionalProperties": false
                       },
@@ -456,12 +463,19 @@
                             "type": "integer",
                             "minimum": 0,
                             "maximum": 9007199254740991
+                          },
+                          "saturatedSince": {
+                            "type": "integer",
+                            "minimum": 0,
+                            "maximum": 9007199254740991,
+                            "nullable": true
                           }
                         },
                         "required": [
                           "resourceId",
                           "amountGrains",
-                          "lostGrains"
+                          "lostGrains",
+                          "saturatedSince"
                         ],
                         "additionalProperties": false
                       },
@@ -855,12 +869,19 @@
                             "type": "integer",
                             "minimum": 0,
                             "maximum": 9007199254740991
+                          },
+                          "saturatedSince": {
+                            "type": "integer",
+                            "minimum": 0,
+                            "maximum": 9007199254740991,
+                            "nullable": true
                           }
                         },
                         "required": [
                           "resourceId",
                           "amountGrains",
-                          "lostGrains"
+                          "lostGrains",
+                          "saturatedSince"
                         ],
                         "additionalProperties": false
                       },
@@ -1430,12 +1451,19 @@
                             "type": "integer",
                             "minimum": 0,
                             "maximum": 9007199254740991
+                          },
+                          "saturatedSince": {
+                            "type": "integer",
+                            "minimum": 0,
+                            "maximum": 9007199254740991,
+                            "nullable": true
                           }
                         },
                         "required": [
                           "resourceId",
                           "amountGrains",
-                          "lostGrains"
+                          "lostGrains",
+                          "saturatedSince"
                         ],
                         "additionalProperties": false
                       },
